<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_mid">

        <ImageView
            android:id="@+id/img_logo"
            style="@style/heading_style"
            android:layout_width="@dimen/login_logo_size"
            android:layout_height="@dimen/login_logo_size"
            android:layout_marginStart="@dimen/app_padding"
            android:layout_marginLeft="@dimen/app_padding"
            android:layout_marginTop="@dimen/dp_100"
            android:src="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/heading_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/logo_text"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_logo"
            app:layout_constraintStart_toEndOf="@+id/img_logo"
            app:layout_constraintTop_toTopOf="@+id/img_logo" />

        <View
            android:id="@+id/view_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/box_white_top_round_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/img_graphic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:adjustViewBounds="true"
            android:src="@drawable/graphic_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_1"
            app:layout_constraintTop_toTopOf="@+id/view_bg" />

        <TextView
            android:id="@+id/lbl_sign_in"
            style="@style/heading_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_graphic"
            app:layout_constraintStart_toStartOf="@+id/img_logo"
            app:layout_constraintTop_toBottomOf="@+id/img_graphic" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/lbl_email"
            style="@style/subtitle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/lbl_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/lbl_sign_in" />

        <EditText
            android:id="@+id/et_email"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/app_padding"
            android:layout_marginTop="@dimen/dp_3"
            android:hint="@string/email_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_email" />

        <TextView
            android:id="@+id/lbl_password"
            style="@style/subtitle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/lbl_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <EditText
            android:id="@+id/et_password"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/dp_3"
            android:drawableEnd="@drawable/ic_eye"
            android:drawableRight="@drawable/ic_eye"
            android:hint="@string/create_pass"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="@+id/lbl_password"
            app:layout_constraintTop_toBottomOf="@+id/lbl_password" />

        <TextView
            android:id="@+id/tv_forget_pass"
            style="@style/subtitle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/forget_password"
            android:textColor="@color/gray_mid"
            app:layout_constraintStart_toStartOf="@+id/lbl_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/button_sign_in"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_forget_pass" />

        <TextView
            android:id="@+id/tv_or_sign_in"
            style="@style/subtitle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/or_using"
            app:layout_constraintBottom_toTopOf="@id/img_twitter"
            app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
            app:layout_constraintStart_toStartOf="@+id/button_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_in"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/img_google"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_google"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/img_twitter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/button_sign_in"
            app:layout_constraintTop_toTopOf="@+id/img_twitter" />

        <ImageView
            android:id="@+id/img_twitter"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_15"
            android:src="@drawable/ic_twitter"
            app:layout_constraintBottom_toTopOf="@+id/tv_create_account"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/img_fb"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_google"
            app:layout_constraintTop_toBottomOf="@+id/tv_or_sign_in"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/img_fb"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_facebook"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_twitter"
            app:layout_constraintTop_toTopOf="@+id/img_twitter" />

        <TextView
            android:id="@+id/tv_create_account"
            style="@style/subtitle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:text="@string/no_account"
            android:textColorHighlight="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/button_sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>